[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axfeat = { path = "../../api/axfeat" }
axstd = { path = "../../ulib/axstd", features = ["alloc"], optional = true }
axconfig = { path = "../../modules/axconfig" }
memory_addr = { path = "../../crates/memory_addr" }
elf = { version = "0.7.4", default-features = false }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
