[package]
name = "axdtb"
version = "0.1.0"
edition = "2021"
authors = ["King <lispking@qq.com>"]
description = "Device Tree Blobs Parser library of ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axdtb"
documentation = "https://rcore-os.github.io/arceos/axdtb/index.html"

[dependencies]
hermit-dtb = "0.1.1"

axlog = { path = "../axlog" }
